--- a/outputs/paper/restaurant_references.bib
+++ b/outputs/paper/restaurant_references.bib
@@ -6,8 +6,49 @@
     year = {2020},
     url = {https://www.R-project.org/},
   }
+
+@Manual{gridExtra,
+    title = {gridExtra: Miscellaneous Functions for "Grid" Graphics},
+    author = {Baptiste Auguie},
+    year = {2017},
+    note = {R package version 2.3},
+    url = {https://CRAN.R-project.org/package=gridExtra},
+  }
+
+@Article{sf,
+    author = {Edzer Pebesma},
+    title = {{Simple Features for R: Standardized Support for Spatial Vector Data}},
+    year = {2018},
+    journal = {{The R Journal}},
+    doi = {10.32614/RJ-2018-009},
+    url = {https://doi.org/10.32614/RJ-2018-009},
+    pages = {439--446},
+    volume = {10},
+    number = {1},
+  }
   
   
+@Manual{mapview,
+    title = {mapview: Interactive Viewing of Spatial Data in R},
+    author = {Tim Appelhans and Florian Detsch and Christoph Reudenbach and Stefan Woellauer},
+    year = {2020},
+    note = {R package version 2.9.0},
+    url = {https://CRAN.R-project.org/package=mapview},
+  }
+  
+@Article{ggmap,
+    author = {David Kahle and Hadley Wickham},
+    title = {ggmap: Spatial Visualization with ggplot2},
+    journal = {The R Journal},
+    year = {2013},
+    volume = {5},
+    number = {1},
+    pages = {144--161},
+    url = {https://journal.r-project.org/archive/2013-1/kahle-wickham.pdf},
+  }
+  
+  
+
 @Article{tidyverse,
     title = {Welcome to the {tidyverse}},
     author = {Hadley Wickham and Mara Averick and Jennifer Bryan and Winston Chang and Lucy D'Agostino McGowan and Romain François and Garrett Grolemund and Alex Hayes and Lionel Henry and Jim Hester and Max Kuhn and Thomas Lin Pedersen and Evan Miller and Stephan Milton Bache and Kirill Müller and Jeroen Ooms and David Robinson and Dana Paige Seidel and Vitalie Spinu and Kohske Takahashi and Davis Vaughan and Claus Wilke and Kara Woo and Hiroaki Yutani},
