--- a/outputs/paper/The Effects of Opening a Restaurant in a Pandemic_Temp.Rmd
+++ b/outputs/paper/The Effects of Opening a Restaurant in a Pandemic_Temp.Rmd
@@ -1,11 +1,12 @@
 ---
-title: "The Effects of Opening a Restaurant During a Pandemic"
+title: |
+  \vspace{5cm} \LARGE "The Effects of Opening a Restaurant During a Pandemic"
 author: "Wen Ma, Reem Alasadi,  Rachael Lam, Tim Stephens"
 date: "`r format(Sys.time(), '%d %B %Y')`"
 output: 
   bookdown::pdf_document2:
 thanks: 'Code and data are available at: https://github.com/wenmade/2178Paper2.git.'
-abstract: In May and June of 2021, a random selection of Toronto restaurants were selected to open during the COVID-19 pandemic.
+abstract: In May and June of 2021, a random selection of Toronto restaurants were selected to open during the COVID-19 pandemic.\newpage
 bibliography: restaurant_references.bib
 toc: yes
 ---
