--- a/outputs/paper/The Effects of Opening a Restaurant in a Pandemic_Temp.Rmd
+++ b/outputs/paper/The Effects of Opening a Restaurant in a Pandemic_Temp.Rmd
@@ -35,11 +35,11 @@ library(gridExtra)
 \pagebreak
 # Introduction
 
-The COVID-19 pandemic has induced global action and, in some instances, inaction, that has affected millions of people. With over 100 million confirmed cases and 2.4 million total deaths, the epidemic has caused suffering and distress for countless people [@bbc]. In other instances, it has brought immense fortune - Jeff Bezos’s wealth increased \$92 billion between March and August of 2020 [@oxfam]. It is estimated that he could give all his 876,000 employees a $105,000 bonus and still be as wealthy as he was pre-epidemic [@oxfam]. Unfortunately, this has been a fantasy for the majority of global citizens. For Canada in particular, the situation has been equally challenging. 
+The COVID-19 pandemic has induced global action and, in some instances, inaction, that has affected millions of people. With over 100 million confirmed cases and 2.4 million total deaths, the pandemic has caused suffering and distress for countless people [@bbc]. In other instances, it has brought immense fortune - Jeff Bezos’s wealth increased \$92 billion between March and August of 2020 [@oxfam]. It is estimated that he could give all his 876,000 employees a $105,000 bonus and still be as wealthy as he was before the outbreak of COVID-19 [@oxfam]. Unfortunately, this has been a fantasy for the majority of global citizens - and Canada is no exception. 
 
 &nbsp; 
 
-At the beginning of the epidemic, nearly a sixth of all Canadians applied for emergency benefits [@harris]. This has had enormous effects on the population’s mental health with 48% rating their mental health as eight or higher on a ten point scale in 2020 compared to 73% in 2018 [@statcan]. Concurrently, the COVID-19 pandemic has also caused disruptions in numerous industries, but with some of the most detrimental ones occurring in the consumer-facing service sector [@statcan]. Before the pandemic, the restaurant industry generated one out of every fifteen jobs, paying Canadians nearly \$30 billion in wages and benefits [@ourrest]. It also contributed $31 billion to Canada’s GDP annually, proving its economic value [@ourrest]. Unfortunately, the epidemic has generated massive unemployment and many restaurants have been shut down and will never reopen [@larue]. 
+At the beginning of the pandemic, nearly a sixth of all Canadians applied for emergency benefits [@harris]. This has had enormous effects on the population’s mental health with 48% rating their mental health as eight or higher on a ten point scale in 2020 compared to 73% in 2018 [@statcan]. Concurrently, the COVID-19 pandemic has also caused disruptions in numerous industries, but with some of the most detrimental ones occurring in the consumer-facing service sector [@statcan]. Before the pandemic, the restaurant industry generated one out of every fifteen jobs, paying Canadians nearly \$30 billion in wages and benefits [@ourrest]. It also contributed $31 billion to Canada’s GDP annually, proving its economic value [@ourrest]. Unfortunately, the epidemic has generated massive unemployment and many restaurants have been shut down and will never reopen [@larue]. 
 
 &nbsp;
 
@@ -56,23 +56,22 @@ This paper will first explore….
 
 ## Description of Study 
 
-At the time of this study, it was assumed that all restaurants in the Greater Toronto Area (GTA) were closed due to COVID-19. However, restaurants could continue to prepare food for curb-side pickup and delivery so their businesses could generate some income. This study looks at the effects of the lockdown on the restaurant industry and inspects the benefits of re-opening a business for a short amount of time during the pandemic. Keeping the restaurant business afloat in Toronto will be a monumental and expensive task. If risk can be mitigated, it could be worth it to allow some restaurants to (temporarily) re-open. If so, they could generate enough income to survive the pandemic. Otherwise, the government could be looking at subsidies for each business – and with the sheer number of foodservice establishments in the GTA, this could add up quickly. 
+At the time of this study, it was assumed that all restaurants in the Greater Toronto Area (GTA) were closed due to COVID-19. However, restaurants could continue to prepare food for curb-side pickup and delivery so their businesses could generate some income. This study looks at the effects of the lockdown on the restaurant industry and inspects the benefits of re-opening a business for a short amount of time during the pandemic. Keeping the restaurant business afloat in Toronto will be a monumental and expensive task. If risk can be mitigated, it could be justifiable to allow some restaurants to (temporarily) re-open. If so, they could generate enough income to survive the pandemic. Otherwise, the government could be looking at subsidies for each business – and with the sheer number of foodservice establishments in the GTA, this could add up quickly. 
 
 &nbsp;
 
-There are many foodservice establishments in Toronto, and it would be ideal to re-open everything. However, this is not a realistic option. Due to the nature of how COVID-19 spreads, it is still crucial that we limit the number of interactions people have with one another during the day. Therefore, we had to take a subsample from the larger foodservice establishment population. Since “dine-in” restaurants have had minimal opportunity to generate revenue during the pandemic, they were selected as the frame for this study. Foodservice establishments listed as “restaurant” in the City of Toronto’s Dinesafe Dataset [@Dinesafe] were considered.
+There are many foodservice establishments in Toronto, and it would be ideal to re-open everything. However, this is not a realistic option. Due to the nature of how COVID-19 spreads, it is still crucial that we limit the number of interactions people have with one another during the day. Therefore, we had to take a subsample from the larger foodservice establishment population. Since “dine-in” restaurants have had minimal opportunity to generate revenue during the pandemic, they were selected as the frame for this study. Foodservice establishments listed as “restaurant” in the City of Toronto’s Dinesafe dataset [@Dinesafe] were considered.
  
 &nbsp;
  
-The eligible businesses were then contacted by the Ontario Government via email or phone and were asked if they would like to participate in a trial re-opening. If they answered yes, they were added to a list. If they decided against the re-opening, or did not respond, they were not included in the study. After contacting the different businesses, the “yes” list was randomly subsampled into 2 groups, with a 50:50 chance to be placed in each group. The first group had the opportunity to re-open their business for a period of 2 months: May – June 2021. The other group was asked to remain closed to act as a control group. Participants who could re-open their business were issued a certification sticker that must have been visible from the street. At the end of the two months, a survey was released to the participants to gain information about their business, how it has been affected by the COVID-19 pandemic, and how much re-opening helped. 
+The eligible businesses were then contacted by the Ontario Government via email or phone and were asked if they would like to participate in a trial re-opening. If they answered yes, they were added to a list. If they decided against the re-opening, or did not respond, they were not included in the study. After contacting the different businesses, the “yes” list was randomly subsampled into 2 groups, with a 50:50 chance to be placed in each group. The first group had the opportunity to re-open their business for a period of 2 months: May – June 2021. The other group was asked to remain closed to act as a control group. Participants who could re-open their business were issued a certification sticker that must have been visible from the street. At the end of the two months, a survey was released to the participants to gain information about their business, how it had been affected by the COVID-19 pandemic, and how much re-opening helped. 
 
 &nbsp;
 
-To entice the control group to complete the survey at the end of June, we initially discussed providing financial compensation. However, with over 7,000 eager-to-open restaurants in the GTA [@Dinesafe] this number would quickly escalate to an unrealistic number. Therefore, the Ontario Government has allowed the control group to re-open their business for two months as well – if they completed the survey (as compensation for participating). Those in the control group who completed the survey could open for the months of July and August (2021), but would no longer be part of the study. For more information on the survey including a detailed description and screenshots of the questions, see the Appendix. Because of the way this study has been structured, the cost remained relatively low – just a payment to Petit Poll for their work. 
-
+To entice the control group to complete the survey at the end of June, we initially discussed providing financial compensation. However, with over 7,000 eager-to-open restaurants in the GTA [@Dinesafe] this number would quickly escalate to an unrealistic proportion. Therefore, the Ontario Government has allowed the control group to re-open their business for two months as well – if they completed the survey (as compensation for participating). Those in the control group who completed the survey could open for the months of July and August (2021), but would no longer be part of the study. For more information on the survey including a detailed description and screenshots of the questions, see the Appendix. Because of the way this study has been structured, the cost remained relatively low – just a payment to Petit Poll for their work. 
 &nbsp;
 
-After completion of the study, Petit Poll analyzed the survey responses and presented them to the Ontario Government. Those restaurants who responded to the survey were considered as part of the sample. The government must make the final decision if it is worth the risk to re-open businesses during the COVID-19 pandemic. Further studies may be needed to decide how many businesses should be allowed to open, and for how long.  
+After completion of the study, Petit Poll analyzed the survey responses and presented them to the Ontario Government. Those restaurants who responded to the survey were considered part of the sample. The government must make the final decision if it is worth the risk to re-open businesses during the COVID-19 pandemic. Further studies may be needed to decide how many businesses should be allowed to open, and for how long.  
 
 &nbsp;
 
@@ -82,11 +81,11 @@ This dataset was pulled from the City of Toronto’s Open Data Portal – Dinesa
 
 &nbsp; 
 
-The Dinesafe dataset was published by Toronto Public Health. Its main purpose is to record the number of inspections, infractions, and legal histories of different foodservice businesses in the GTA. In addition, it also holds basic information on all registered Torono foodservice establishments. After conducting an inspection of a respective foodservice location, a record of what was done or found is created and eventually transferred to a CSV file. Unregistred restaurants are not included in the dataset. 
+The Dinesafe dataset was published by Toronto Public Health. Its main purpose is to record the number of inspections, infractions, and legal histories of different foodservice businesses in the GTA. In addition, it also holds basic information on all registered Torono foodservice establishments. After conducting an inspection of a respective foodservice location, a record of what was done or found is created and eventually transferred to a CSV file. Unregistered restaurants are not included in the dataset. 
 
 &nbsp;
 
-For the purposes of this study, we kept information about the business’ name, location, and type. Location included street address, latitude, and longitude. Information about inspections was removed from the dataset. There were many variables from the survey that were added to the dataset. First, the restaurant ID was added, starting at 1 and increasing incrementally. The rest of the variables were randomly generating in R [@R]. Those variables were: Phone number 1, phone number 2, email, website, number of years in operation, franchise (y/n), own or lease, number of employees before the first lockdown, number of employees at the end of the first lockdown, number of employees during re-opening, the total number of weekly hours the restaurant was open before the lockdown, weekly hours during the lockdown, weekly hours during the temporary re-opening, delivery (y/n), curbside pickup (y/n), dine-in service (y/n), patio service (y/n), type of cuisine, serves alcohol (y/n), target pricepoint (low, average, high), income and profit for the months of May and June in 2019, 2020, 2021 (each with their own column), was the restaurant selected to re-open (y/n), and finally, helpfulness of the re-opening on a scale of 1 to 5. 
+For the purposes of this study, we kept information about the business’ name, location, and type. Location included street address, latitude, and longitude. Information about inspections was removed from the dataset, as it fell outside the scope of this analysis. There were many variables from the survey that were added to the dataset. First, the restaurant ID was added, starting at 1 and increasing incrementally. The rest of the variables were randomly generating in R [@R]. Those variables were: Phone number 1, phone number 2, email, website, number of years in operation, franchise (y/n), own or lease, number of employees before the first lockdown, number of employees at the end of the first lockdown, number of employees during re-opening, the total number of weekly hours the restaurant was open before the lockdown, weekly hours during the lockdown, weekly hours during the temporary re-opening, delivery (y/n), curbside pickup (y/n), dine-in service (y/n), patio service (y/n), type of cuisine, serves alcohol (y/n), target pricepoint (low, average, high), income and profit for the months of May and June in 2019, 2020, 2021 (each with their own column), was the restaurant selected to re-open (y/n), and finally, helpfulness of the re-opening on a scale of 1 to 5. 
 
 &nbsp; 
 
@@ -1047,7 +1046,7 @@ grid.arrange(control_high_end_staff, sample_high_end_staff, ncol=2, top = "Staff
 
 ## Survey Description
 
-The survey was released to those businesses who answered “Yes” upon the initial contact from the government. Those who answered the survey were part of the sample for this study. The survey was produced by Petit Poll, a company employed by the Ontario Government, and a link can be found here.  The survey contained sections about contact information, background and workforce, and performance. The survey looked to generate data about 3 distinct time periods: pre-pandemic, lockdown, and during re-opening. 
+The survey was released to those businesses who answered “Yes” upon the initial contact from the government. Those who answered the survey were part of the sample for this study. The survey was produced by Petit Poll, a company employed by the Ontario Government, and a link can be found [__here__](https://docs.google.com/forms/d/e/1FAIpQLSeafb8VzHCH_0ZQVKnfg46_E6WHMVqnADwMcg7nOqaibhFweg/viewform?usp=sf_link). The survey contained sections about contact information, background and workforce, and performance. The survey looked to generate data about 3 distinct time periods: pre-pandemic, lockdown, and during re-opening. 
 
 &nbsp;
 
@@ -1067,12 +1066,7 @@ Since financial compensation is not being offered in this study, the cost will b
 
 &nbsp;
 
-A link the survey can be found here:
-https://docs.google.com/forms/d/e/1FAIpQLSeafb8VzHCH_0ZQVKnfg46_E6WHMVqnADwMcg7nOqaibhFweg/viewform?usp=sf_link 
-
-&nbsp;
-
-Alternatively, screenshots of the different survey questions have been attached below. 
+Screenshots of the different survey questions have been attached below. 
 
 &nbsp;
 
